--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "gulp-gh-pages": "^0.5.4",
     "gulp-webserver": "^0.9.1"
   },
   "dependencies": {
